--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   cupertino_icons: ^1.0.8
   curved_navigation_bar: ^1.0.6
   flutter_ruler_picker: ^1.0.6
+  flutter_bloc: ^9.1.0
 
 dev_dependencies:
   flutter_test:
