take the first number after the decimal point handle the errors gender selection added profile widget

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -63,9 +63,8 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-    - assets/female.png
-    - assets/male.png
-
+    - assets/female.jpg
+    - assets/malelogo.jpg
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
 
